# veritas

./: .gitignore  CLAUDE.md  PROPOSAL.md  README.md  ROADMAP.md  pyproject.toml
.claude/: launch.json
bench/: RESULTS.md  __init__.py  promptbench.py  run_bench.py  selfconsistency.py
bench/experiments/: __init__.py  confidence_self_consistency.py  prompt_accept_rate.py
docs/: about.html  confidence-layer.md  index.html
engine/: __init__.py  artifact.py  embed.py  executor.py  gate.py  memory.py  model.py  run.py  tokens.py  validation.py
hub/: __init__.py  app.py  ingest.py  store.py
hub/static/: index.html
orgs/: __init__.py  planning.py  presets.py  registry.py
orgs/docs_studio/: __init__.py  agents.py  gates.py  pipeline.py  spec.py
orgs/empirical_lab/: __init__.py  agents.py  experiment.py  gates.py  pipeline.py  roster.py
orgs/production_studio/: __init__.py  agents.py  assets.py  editing.py  gates.py  media.py  pipeline.py  production.py  publishing.py  roster.py  taste.py
orgs/research_studio/: agents.py  confidence.py  gates.py  knowledge.py  pipeline.py  report.py  roster.py
orgs/software_studio/: ROSTER.md  __init__.py  agents.py  app.py  builder.py  gates.py  languages.py  module.py  oracle.py  pipeline.py  plan.py  properties.py  roster.py  spec.py  tuning.py
orgs/web_studio/: aesthetics.py  agents.py  browser.py  create.py  gates.py  interview.py  pipeline.py  profile.py  roster.py  spec.py
scripts/: demo_learning.py  demo_spine.py  run_docs.py  run_studio.py
tests/: test_app.py  test_builder.py  test_cast.py  test_commons.py  test_confidence.py  test_confidence_experiment.py  test_decision.py  test_docs_studio.py  test_embed.py  test_empirical.py  test_executor.py  test_hub.py  test_hub_bench.py  test_hub_brief.py  test_hub_commons.py  test_hub_create.py  test_hub_plan.py  test_hub_produce.py  test_hub_report_page.py  test_hub_route.py  test_hub_tune.py  test_ingest.py  test_knowledge.py  test_lang_pipeline.py  test_languages.py  test_learning.py  test_memory_frontmatter.py  test_module.py  test_oracle.py  test_plan.py  test_planning.py  test_presets.py  test_production.py  test_production_assets.py  test_production_editing.py  test_production_publishing.py  test_production_taste.py  test_prompt_experiment.py  test_properties.py  test_registry.py  (+14 more)
