[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "veritas"
version = "0.0.0"
description = "Veritas Dynamics — reliable autonomous organizations. The engine."
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "mypy>=1.8"]

[tool.setuptools]
packages = ["engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["engine"]

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true
