[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "veritas"
version = "0.0.0"
description = "Veritas Dynamics — reliable autonomous organizations. The engine."
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
hub = ["fastapi>=0.110", "uvicorn>=0.29", "anthropic>=0.40", "yt-dlp>=2024.0"]
dev = ["pytest>=8.0", "mypy>=1.8", "fastapi>=0.110", "uvicorn>=0.29", "httpx>=0.27", "anthropic>=0.40", "playwright>=1.50", "yt-dlp>=2024.0"]
# Web Studio (P14) renders in a real browser: after install, run `playwright install chromium`.

[tool.setuptools.packages.find]
include = ["engine*", "orgs*", "hub*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["engine", "orgs", "hub"]

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yt_dlp"
ignore_missing_imports = true
